Archive2/5f/cdd673ebff5ca2/output
In file included from main.cpp:1:0:
/usr/include/c++/4.8/functional: In instantiation of 'struct std::_Bind_simple<std::_Mem_fn<void (A::*)(int)>(std::reference_wrapper<A>, int)>':
/usr/include/c++/4.8/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (A::*)(int); _Args = {std::reference_wrapper<A>, int}]'
main.cpp:14:45:   required from here
/usr/include/c++/4.8/functional:1697:61: error: no type named 'type' in 'class std::result_of<std::_Mem_fn<void (A::*)(int)>(std::reference_wrapper<A>, int)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/include/c++/4.8/functional:1727:9: error: no type named 'type' in 'class std::result_of<std::_Mem_fn<void (A::*)(int)>(std::reference_wrapper<A>, int)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
